--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/sweetalert.js"></script>
         <script src="~/js/jquery.dataTables.js"></script>
-        
+
         <script src="~/js/Lotes.js" asp-append-version="true"></script>
         <script src="~/js/Formulas.js" asp-append-version="true"></script>
         <script src="~/js/Bombos.js" asp-append-version="true"></script>
@@ -146,6 +146,7 @@
 
         <script src="~/js/Proveedor.js" asp-append-version="true"></script>
         <script src="~/js/Descarne.js" asp-append-version="true"></script>
+        <script src="~/js/Curtido.js" asp-append-version="true"></script>
 
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
