--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Proceso de Curtido</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="Listatipotripa(); listaPersonal();ListaBombos(); ListaFormulas();">Nuevo Curtido</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="llenaTablaCurtidoModal();Listatipotripa(); listaPersonal();ListaBombos(); ListaFormulas();">Nuevo Curtido</a>
 </p>
 <table class="table">
     <thead>
@@ -112,6 +112,37 @@
                         <label class="control-label">Observaciones</label>
                         <input id="Observaciones" name="Observaciones" class="form-control" />
                     </div>
+
+                    <table class="table" id="tablaPlambre">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Selección
+                                </th>
+                                <th>
+                                    Codigo Lote
+                                </th>
+                                <th>
+                                    <select id="tipoPiel" name="tipoPiel" onchange="tipopiel()" class="form-control">
+                                        <option value="0">Buscar por Tipo de Piel</option>
+                                    </select>
+                                </th>
+                                <th>
+                                    <select id="clasificaciones" name="clasificaciones" onchange="tipopiel();" class="form-control">
+                                        <option value="0"> Buscar por Clasificacion Pelo</option>
+                                    </select>
+                                </th>
+                                <th>
+                                    Numero de Pieles
+                                </th>
+                                <th>
+                                    Peso
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="ListaCurtido"></tbody>
+                    </table>
+
                 </form>
             </div>
             <div class="modal-footer">
