--- a/ServicuerosSA/Views/Lotes/Index.cshtml
+++ b/ServicuerosSA/Views/Lotes/Index.cshtml
@@ -2,7 +2,7 @@
 
 <p>
     <a class="btn btn-success" asp-action="Create">Ingresar nuevo lote</a>
-    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#Impresionlote" onclick="ImprimirLote();">Reporte de Lotes</a>
+    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#Impresionlote" onclick="ImprimirLote(); numeropileslote();">Reporte de Lotes</a>
 
 </p>
 
