--- a/ServicuerosSA/Views/Bodegatripas/Create.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Create.cshtml
@@ -30,17 +30,17 @@
                 <span asp-validation-for="peso" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DescarneId" class="control-label"></label>
+                <label asp-for="DescarneId" class="control-label">Descarne</label>
                 <select asp-for="DescarneId" class ="form-control" asp-items="ViewBag.DescarneId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ClasificacionTripaId" class="control-label"></label>
+                <label asp-for="ClasificacionTripaId" class="control-label">Clasificacion Tripa</label>
                 <select asp-for="ClasificacionTripaId" class ="form-control" asp-items="ViewBag.ClasificacionTripaId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Personal" class="control-label"></label>
-                <input asp-for="Personal" class="form-control" />
-                <span asp-validation-for="Personal" class="text-danger"></span>
+                <label asp-for="PersonalId" class="control-label">Personal</label>
+                <input asp-for="PersonalId" class="form-control" />
+                <span asp-validation-for="PersonalId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-default" />
