--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -143,6 +143,7 @@
         <script src="~/js/Bodega.js" asp-append-version="true"></script>
         <script src="~/js/Personal.js" asp-append-version="true"></script>
         <script src="~/js/BodegaTripa.js" asp-append-version="true"></script>
+        <script src="~/js/Medidas.js" asp-append-version="true"></script>
 
         <script src="~/js/Proveedor.js" asp-append-version="true"></script>
         <script src="~/js/Descarne.js" asp-append-version="true"></script>
