--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>Lista en tripas</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick="listaPersonal(); Listatipotripa(); listadescarne(); bodegastri();">Nueva Clasificacion</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick="listaPersonal(); Listatipotripa(); listadescarne(); bodegastri(); medidas();">Nueva Clasificacion</a>
     <a href="#" class="btn btn-info" data-toggle="modal" data-target="#ImpresionClasiTripa" onclick=" ImprimirClasiTripa();">Reporte de Clasificación en Tripa</a>
 </p>
 <table class="table">
@@ -82,6 +82,14 @@
                         <input id="PesoInput" type="number" name="PesoInput" class="form-control">
                     </div>
                     <div class="form-group">
+                        <label class="control-label">Medida</label>
+                        <select id="MedidaId" name="MedidaId" required class="form-control">
+                            <option value="0">--Seleccione una medida</option>
+                        </select>
+                        <br />
+                        <span id="mensajeme" class="alert alert-danger hidden">--Seleccione una medida</span>
+                    </div>
+                    <div class="form-group">
                         <label class="control-label">Personal</label>
                         <select id="personalId" name="personalId" required class="form-control">
                             <option value="0">Seleccione el Personal asignado a esta operación</option>
@@ -91,24 +99,24 @@
                     </div>
 
                     @*<table class="table">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        Codigo lote
-                                    </th>
-                                    <th>
-                                        Numero de pieles
-                                    </th>
-                                    <th>
-                                        Peso
-                                    </th>
-                                    <th>
+            <thead>
+                <tr>
+                    <th>
+                        Codigo lote
+                    </th>
+                    <th>
+                        Numero de pieles
+                    </th>
+                    <th>
+                        Peso
+                    </th>
+                    <th>
 
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody id="Descarneslista"></tbody>
-                        </table>*@
+                    </th>
+                </tr>
+            </thead>
+            <tbody id="Descarneslista"></tbody>
+        </table>*@
                     @*<tbody id="Tripaslista" ></tbody>*@
                 </form>
             </div>
