--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -117,6 +117,7 @@
                                     <th> Codigo de Lote </th>
 
                                     <th> Cantidad  </th>
+                                    <th>Fecha de Ingreso</th>
                                     
                                 </tr>
 
