--- a/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="NumeroPieles" class="control-label"></label>
-                <input asp-for="NumeroPieles" class="form-control" />
+                <input asp-for="NumeroPieles" class="form-control" onfocusout="numeropileslote();" />
                 <span asp-validation-for="NumeroPieles" class="text-danger"></span>
             </div>
             <div class="form-group">
