--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Proceso de Curtido</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="llenaTablaCurtidoModal();Listatipotripa(); listaPersonal();ListaBombos(); ListaFormulas();">Nuevo Curtido</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="llenaTablaCurtidoModal(); Listatipotripa(); listaPersonal(); ListaBombos(); ListaFormulas(); tabCurtido();">Nuevo Curtido</a>
 </p>
 <table class="table">
     <thead>
@@ -57,14 +57,7 @@
             </div>
             <div class="modal-body">
                 <form>
-                    <div class="form-group">
-                        <label class="control-label">Clasificacion Tripa</label>
-                        <select id="ClasificaciontripaId" name="ClasificaciontripaId" required class="form-control">
-                            <option value="0">Seleccione la clasificacion asignado a esta operación</option>
-                        </select>
-                        <br />
-                        <span id="mensajeclasi" class="alert alert-danger hidden">Seleccione la aclasificacion asignado</span>
-                    </div>
+                 
                     <div class="form-group">
                         <label class="control-label">Bombo</label>
                         <select id="bomboId" name="bomboId" required class="form-control">
@@ -113,7 +106,7 @@
                         <input id="Observaciones" name="Observaciones" class="form-control" />
                     </div>
 
-                    <table class="table" id="tablaPlambre">
+                    <table class="table" id="tablaCurtido">
                         <thead>
                             <tr>
                                 <th>
@@ -123,20 +116,19 @@
                                     Codigo Lote
                                 </th>
                                 <th>
-                                    <select id="tipoPiel" name="tipoPiel" onchange="tipopiel()" class="form-control">
-                                        <option value="0">Buscar por Tipo de Piel</option>
-                                    </select>
+                                    <!--  <select id="tipoPiel" name="tipoPiel" onchange="tipopiel()" class="form-control">
+          <option value="0">Buscar por Seleccion</option>
+      </select>-->Clasificacion
                                 </th>
-                                <th>
-                                    <select id="clasificaciones" name="clasificaciones" onchange="tipopiel();" class="form-control">
-                                        <option value="0"> Buscar por Clasificacion Pelo</option>
-                                    </select>
-                                </th>
+
                                 <th>
                                     Numero de Pieles
                                 </th>
                                 <th>
                                     Peso
+                                </th>
+                                <th>
+                                    Medida
                                 </th>
                             </tr>
                         </thead>
@@ -147,7 +139,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" id="guarda" name="guarda" onclick=" ">Guardar</button>
+                <button type="button" class="btn btn-primary" id="guarda" name="guarda" onclick="">Guardar</button>
             </div>
         </div>
     </div>
