--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -6,8 +6,8 @@
 
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick="listaPersonal(); Listatipotripa(); listadescarne(); bodegastri(); medidas();">Nueva Clasificacion</a>
-    @*<a href="#" class="btn btn-info" data-toggle="modal" data-target="#ImpresionClasiTripa" onclick=" ImprimirClasiTripa();">Reporte de Clasificación en Tripa</a>*@
-    <a class="btn btn-info" asp-action="Create">Reporte de clasificacion tripa</a>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#ImpresionClasiTripa" onclick=" ImprimirClasiTripa();">Reporte de Clasificación en Tripa</a>
+    <a class="btn btn-info" asp-action="Create">Reporte de Carnaza</a>
 
 </p>
 <table class="table">
