--- a/ServicuerosSA/Views/Bodegatripas/Create.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Create.cshtml
@@ -9,7 +9,7 @@
 
 
 
-<div class="form-group" onclick="ImprimirClasiTripa();">
+<div class="form-group">
 
     <table class="table table-bordered SaltoDePagina">
 
