--- a/ServicuerosSA/Views/Bodegatripas/Create.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Create.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Reporte de Clasificacion Tripa</h2>
+<h2>Reporte de Carnaza</h2>
 <hr />
 
 
 
-<div class="form-group" onclick="ImprimirClasiTripa();">
+<div class="form-group" onclick="ImprimirCarnaza();">
 
     <table class="table table-bordered SaltoDePagina">
 
@@ -31,7 +31,7 @@
             </tr>
 
         </thead>
-        <tbody id="TablaClasiTripa"></tbody>
+        <tbody id="TablaCarnaza"></tbody>
     </table>
 </div>
 @*<div class="modal-footer">
