--- a/ServicuerosSA/Views/Bodegas/Details.cshtml
+++ b/ServicuerosSA/Views/Bodegas/Details.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.BodegaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.BodegaId">Editar</a> |
+    <a asp-action="Index">Regresar a la Lista</a>
 </div>
