--- a/ServicuerosSA/Views/Bombos/Details.cshtml
+++ b/ServicuerosSA/Views/Bombos/Details.cshtml
@@ -31,12 +31,12 @@
         <dt>
             @Html.DisplayNameFor(model => model.Peso)
         </dt>
-        <dd>
+        @*<dd>
             @Html.DisplayFor(model => model.Peso)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.BomboId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.BomboId">Editar</a> |
+    <a asp-action="Index">Regresar a la Lista</a>
 </div>
