--- a/ServicuerosSA/Views/Formulas/Delete.cshtml
+++ b/ServicuerosSA/Views/Formulas/Delete.cshtml
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="FormulaId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresar a la Lista</a>
     </form>
 </div>
