--- a/ServicuerosSA/Views/Medidas/Edit.cshtml
+++ b/ServicuerosSA/Views/Medidas/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Medida</h4>
 <hr />
@@ -24,14 +24,14 @@
                 <span asp-validation-for="Abreviatura" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guarda" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la Lista</a>
 </div>
 
 @section Scripts {
