--- a/ServicuerosSA/Views/TipoPiels/Details.cshtml
+++ b/ServicuerosSA/Views/TipoPiels/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>TipoPiel</h4>
+    <h4>Tipo Piel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.TipoPielId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.TipoPielId">Editar</a> |
+    <a asp-action="Index">Regresar a la Lista</a>
 </div>
