--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -147,7 +147,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" id="guarda" name="guarda" onclick="">Guardar</button>
+                <button type="button" class="btn btn-primary" id="guardarCurtido" name="guardarCurtido" onclick="">Guardar</button>
             </div>
         </div>
     </div>
