--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -7,7 +7,7 @@
 
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="llenaTablaCurtidoModal(); Listatipotripa(); listaPersonal(); ListaBombos(); ListaFormulas();listatripas();">Nuevo Curtido</a>
-    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#Impresioncurtido" onclick="ImprimirCurtido();">Reporte de Curtido</a>
+    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#Impresioncurtido" onclick="Imprimircurtido();">Reporte de Curtido</a>
 </p>
 <table class="table">
     <thead>
@@ -17,25 +17,20 @@
                 Fecha
             </th>
             <th>
+                Bodega
+            </th>
+            <th>
+                C.Tripa
+            </th>
+
+            <th>
                 Peso
-            </th>
-            <th>
-                Observaciones
-            </th>
-            <th>
-                Numero de Pieles
             </th>
             <th>
                 Bombo
             </th>
             <th>
-                ClasificacionTripa
-            </th>
-            <th>
                 Formula
-            </th>
-            <th>
-                Personal
             </th>
         </tr>
     </thead>
@@ -178,26 +173,22 @@
                                         Fecha
                                    </th>
                                     <th>
+                                        Bodega
+                                    </th>
+                                    <th>
+                                        C.Tripa
+                                    </th>
+                                
+                                    <th>
                                         Peso
-                                    </th>
-                                    <th>
-                                        Observ
-                                    </th>
-                                    <th>
-                                        #Pieles
                                     </th>
                                     <th>
                                         Bombo
                                     </th>
                                     <th>
-                                        C.Tripa
-                                    </th>
-                                    <th>
                                         Formula
                                     </th>
-                                    <th>
-                                        Personal
-                                    </th>
+                                   
                                 </tr>
 
                             </thead>
