--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -72,6 +72,10 @@
                             <li class="divider"></li>
                             <li><a asp-area="" asp-controller="Curtidos" asp-action="Index">6.-Curtido</a></li>
                             <li class="divider"></li>
+                            <li><a asp-area="" asp-controller="Escurridos" asp-action="Index">7.-Escurrido</a></li>
+                            <li class="divider"></li>
+                            <li><a asp-area="" asp-controller="ClasificacionWBlus" asp-action="Index">8.-Clasificacion WB</a></li>
+                            <li class="divider"></li>
                         </ul>
                     </li>
                     @if (User.IsInRole("Admin") || User.IsInRole("Secre"))
