--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -206,3 +206,139 @@
         </div>
     </div>
 </div>
+
+@*IMPRESION FORMULA CURTIDO*@
+
+<div class="modal fade" id="ImpresionCurtido" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="EtiquetaModal">
+                    Impresion de Formula Curtido
+                </h4>
+            </div>
+
+            <div class="modal-body" id="impresion">
+
+                <div class="modal-body" id="areaImprimir">
+
+                    <div class="form-group">
+
+                        <table class="table table-bordered">
+                            <tr>
+                                <td style="font-size:smaller" rowspan="3">PROCESO DE GESTION DE PRODUCCION</td>
+                                <td colspan="2" rowspan="3">
+                                    <img src="~/images/logo.jpg" style="width:75%" />
+                                </td>
+                                <td style="font-size:xx-small">CODIGO:</td>
+                                <td colspan="2"><label id="codigo" name="codigo" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:xx-small">VERSIÓN:</td>
+                                <td colspan="2"><label id="version" name="version" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:xx-small" colspan="2">FECHA DE ACTUALIZACION:</td>
+                                <td><label id="fecha_act" name="fecha_act" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td align="center" style="font-size:smaller" colspan="6">FORMULACION DE OPERACIÓN</td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:smaller" rowspan="3">
+                                    FP-COFRNO/12
+                                </td>
+                                <td colspan="2" rowspan="3">
+                                    <p>
+                                        <span style="font-size:x-small">
+                                            GUIA DE PROCESO CURTIDO CALZADO TFL
+                                        </span>
+                                    </p>
+                                </td>
+                                <td style="font-size:xx-small">FECHA:</td>
+                                <td style="font-size:xx-small" colspan="2">&nbsp;<label id="fecha_vigencia" name="fecha_vigencia" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:xx-small">VIGENCIA:</td>
+                                <td style="font-size:xx-small" colspan="2"><label id="vigencia" name="vigencia" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:xx-small">PAGINA:</td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:xx-small">TIPO DE PIEL: </td>
+                                <td style="font-size:xx-small"><label id="tipoPiel" name="tipoPiel" class="control-label"></label></td>
+                                <td style="font-size:xx-small" colspan="4">&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:x-small">FECHA:</td>
+                                <td style="font-size:x-small">&nbsp;<label id="fechaImpresion" name="fechaImpresion" class="control-label"></label></td>
+                                <td style="font-size:x-small">PESO KG:</td>
+                                <td style="font-size:x-small">&nbsp;<label id="peso" name="peso" class="control-label"></label></td>
+                                <td style="font-size:xx-small">AUTORIZADO POR:</td>
+                                <td style="font-size:xx-small">&nbsp;<label id="autorizado" name="autorizado" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:x-small">PARADA:</td>
+                                <td style="font-size:x-small">&nbsp;<label id="parada" name="parada" class="control-label"></label></td>
+                                <td style="font-size:x-small">PIELES:</td>
+                                <td style="font-size:x-small">&nbsp;<label id="cantidad" name="cantidad" class="control-label"></label></td>
+                                <td style="font-size:xx-small">PROCESADO POR:</td>
+                                <td style="font-size:xx-small">&nbsp;<label id="procesado" name="procesado" class="control-label"></label></td>
+                            </tr>
+                            <tr>
+                                <td style="font-size:x-small">BOMBO:</td>
+                                <td style="font-size:x-small">&nbsp;<label id="bombo" name="bombo" class="control-label"></label></td>
+                                <td style="font-size:x-small">PROMEDIO:</td>
+                                <td style="font-size:x-small">&nbsp;<label id="promedio" name="promedio" class="control-label"></label></td>
+                                <td style="font-size:xx-small">ENTREGADO POR:</td>
+                                <td style="font-size:xx-small">&nbsp;<label id="entregado" name="entregado" class="control-label"></label></td>
+                            </tr>
+
+                        </table>
+
+                    </div>
+                    <div class="form-group">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Componente</th>
+                                    <th>%</th>
+                                    <th>Cantidad</th>
+                                    <th>Dilucion</th>
+                                    <th>Min</th>
+                                    <th>Observaciones</th>
+                                </tr>
+                            </thead>
+                            <tbody id="TablaDetalleFormula"></tbody>
+                        </table>
+
+                    </div>
+                    <div class="form-group">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <td style="font-size:xx-small" colspan="6" align="center"> Elaborado por: <br />Carlos Sanchez <br /> Tecnico TFL  </td>
+                                    <td style="font-size:xx-small" colspan="6" align="center"> Revisado por: <br />Veronica Vinueza <br /> Coor.Calidad y Medio Ambiente</td>
+                                    <td style="font-size:xx-small" colspan="6" align="center"> Aprobado por: <br /> Econ. Francisco Herdoíza <br /> Gerente General </td>
+                                </tr>
+
+                            </thead>
+
+                        </table>
+                    </div>
+                                    
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');">Imprimir</button>
+            </div>
+        </div>
+    </div>
+</div>
