--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -68,7 +68,7 @@
                         </div>*@
                     <div class="form-group">
                         <label class="control-label">Numero de pieles a Descarne</label>
-                        <input id="CantidadPieles" name="descarne" required class="form-control" onfocusout="controlnumeropieles()">
+                        <input id="CantidadPieles" name="descarne" required class="form-control" onfocusout="controlnumeropielesDes()">
                         <br />
                         <span id="mensajec" class="alert alert-danger hidden">Ingrese un numero de pieles a Descarnar</span>
                     </div>
