--- a/ServicuerosSA/Views/BodegaClasificaciones/Index.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Index.cshtml
@@ -97,9 +97,10 @@
         }
     </tbody>
 </table>
+
 @*IMPRESION REPORTE*@
 <div class="modal fade" id="ImpresionClasificacionPelo" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close"
@@ -129,7 +130,6 @@
                                     <th> Lote </th>
                                     <th> T.Piel </th>
                                     <th> Obs. </th>
-
                                 </tr>
 
                             </thead>
