--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -7,7 +7,7 @@
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick="listaPersonal(); Listatipotripa(); listadescarne(); bodegastri(); medidas();">Nueva Clasificacion</a>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#ImpresionClasiTripa" onclick=" ImprimirClasiTripa();">Reporte de Clasificación en Tripa</a>
-    <a href="#" class="btn btn-default" data-toggle="modal" data-target="#ImpresionCarnaza" onclick="ImprimirCarnaza();">Reporte de Clasificación en Carnaza</a>
+    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#ImpresionCarnaza" onclick="ImprimirCarnaza();">Reporte de Clasificación en Carnaza</a>
 
 </p>
 <table class="table">
