--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -99,7 +99,8 @@
                                 <li class="divider"></li>
                                 <li><a asp-area="" asp-controller="Tipobodegas" asp-action="Index">Tipo de Bodegas</a></li>
                                 <li class="divider"></li>
-                                
+                                <li><a asp-area="" asp-controller="Curtido" asp-action="Index">Curtido</a></li>
+                                <li class="divider"></li>
                             </ul>
                         </li>
                     }
@@ -152,6 +153,8 @@
         <script src="~/js/Proveedor.js" asp-append-version="true"></script>
         <script src="~/js/Descarne.js" asp-append-version="true"></script>
         <script src="~/js/Curtido.js" asp-append-version="true"></script>
+        <script src="~/js/Escurrido.js" asp-append-version="true"></script>
+
 
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
