--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -40,7 +40,7 @@
             <div class="modal-header">
                 <button type="button" class="close"
                         data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true">&times;</span>BodegaTripa
                 </button>
                 <h4 class="modal-title"
                     id="EtiquetaModal">
@@ -79,8 +79,9 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de Pieles</label>
-
-                        <input id="NumeroPielesInput" type="number" name="NumeroPielesInput" class="form-control" onfocus="controlnumeropieltripa()">
+                        <input id="NumeroPielesInput" type="number" name="NumeroPielesInput" class="form-control" onfocusout="controlnumeropieltripa()">
+                        <br />
+                        <span id="mensajeper" class="alert alert-danger hidden">Ingrese un numero que sea menor o igual</span>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Peso</label>
