--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Proceso de Curtido</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="llenaTablaCurtidoModal(); Listatipotripa(); listaPersonal(); ListaBombos(); ListaFormulas();listatripas();">Nuevo Curtido</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoCurtido" onclick="listaPersonal(); ListaBombos(); ListaFormulas(); ListaCuridoCheck();">Nuevo Curtido</a>
     <a href="#" class="btn btn-info" data-toggle="modal" data-target="#Impresioncurtido" onclick="Imprimircurtido();">Reporte de Curtido</a>
 </p>
 <table class="table">
@@ -108,18 +108,13 @@
                                 <th>
                                     Selección
                                 </th>
-
-
-
                                 <th>
                                     Codigo Lote
                                 </th>
-                                <th>
-                                    <select id="ClasificaciontripaId" name="ClasificaciontripaId" onchange="llenaTablaCurtidoModal()" class="form-control">
-                                        <option value="0">Buscar por Seleccion</option>
-                                    </select>
+                                @*<th>
+                                 Seleccion
 
-                                </th>
+                                </th>*@
 
                                 <th>
                                     Numero de Pieles
@@ -128,7 +123,7 @@
                                     Peso
                                 </th>
                                 <th>
-                                    Medida
+                                    Fecha
                                 </th>
 
 
