--- a/ServicuerosSA/Views/Escurridos/Index.cshtml
+++ b/ServicuerosSA/Views/Escurridos/Index.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Escurrido</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoEscurrido" onclick="ListaEscurrido();">Nuevo Proceso</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoEscurrido" onclick="listaescurrido(); ListaBombos(); listaPersonal();">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
@@ -47,11 +47,18 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Lotes en Curtido</label>
-                        <select id="CurtidoId" name="CurtidoId" required class="form-control" onchange="NumeroPielesCurtido(); ">
+                        <select id="CurtidoId" name="CurtidoId" required class="form-control" onchange="numeropielescurtido(); ">
                             <option value="0">Seleccione un lote que desea escurrir</option>
                         </select>
                         <br />
-                        <span id="mensajep" class="alert alert-danger hidden">Selecciones el lote de Curtido</span>
+                        <span id="mensajees" class="alert alert-danger hidden">Selecciones el lote de Curtido</span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Numero de pieles en Curtido</label>
+                        <input id="TotalPielesInput" name="TotalPielesInput" type="text" class="control-label alert alert-success hidden" />
+                    </div>
+                    <div class="form-group">
+                        <input id="codigolotecurt" name="codigolotecurt" type="text" class="control-label  hidden" />
                     </div>
                     <div class="form-group">
                         <label class="control-label">Bombo</label>
@@ -63,11 +70,21 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">Cantidad</label>
-                        <input id="fecha" name="Cantidad" class="form-control" />
+                        <input id="Cantidad" name="Cantidad" class="form-control" onfocusout="controlpielesescurrir()"/>
+                        <br />
+                        <span id="mensajeca" class="alert alert-danger hidden">Numero de pieles incorrecta</span>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Fecha</label>
                         <input id="fecha" name="fecha" class="form-control" type="date" />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Personal</label>
+                        <select id="personalId" name="personalId" required class="form-control">
+                            <option value="0">Seleccione el Personal asignado a esta operación</option>
+                        </select>
+                        <br />
+                        <span id="mensajeper" class="alert alert-danger hidden">Seleccione al Personal</span>
                     </div>
                 </form>
             </div>
